deploy: 3b93902514702f56af1ebf900514a6126d29b5bd

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://opi-project.github.io/404.html">
+<meta property="og:url" content="http://Diamond-Bluff.github.io/404.html">
 <meta itemprop=name content="404 Page not found">
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
@@ -42,7 +42,7 @@ This is not the page you were looking for
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
-<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://opi-project.github.io/>
+<a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=http://Diamond-Bluff.github.io/>
 &copy; OPI Project Website 2022
 </a>
 <div>
