--- a/404.html
+++ b/404.html
@@ -2,10 +2,9 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>OPI Project Website</title>
-<meta name=viewport content="width=device-width,minimum-scale=1">
+<title>OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
-<meta name=generator content="Hugo 0.92.2">
+<meta name=generator content="Hugo 0.93.0">
 <meta name=robots content="noindex, nofollow">
 <link rel=stylesheet href=/ananke/css/main.min.css>
 <meta property="og:title" content="404 Page not found">
@@ -16,8 +15,7 @@
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content>
-</head>
-<body class="ma0 avenir bg-near-white">
+</head><body class="ma0 avenir bg-near-white">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
@@ -27,28 +25,15 @@ OPI Project Website
 </a>
 <div class="flex-l items-center">
 <div class=ananke-socials>
-</div>
-</div>
-</div>
-</nav>
-</div>
-</header>
-<main class=pb7 role=main>
+</div></div></div></nav></div></header><main class=pb7 role=main>
 <article class="center cf pv5 measure-wide-l">
 <h1>
 This is not the page you were looking for
-</h1>
-</article>
-</main>
-<footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
+</h1></article></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://Diamond-Bluff.github.io/>
 &copy; OPI Project Website 2022
 </a>
 <div>
 <div class=ananke-socials>
-</div></div>
-</div>
-</footer>
-</body>
-</html>
+</div></div></div></footer></body></html>
