--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>OPI Project Website</title>
-<meta name=viewport content="width=device-width,minimum-scale=1">
+<title>OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
-<meta name=generator content="Hugo 0.92.2">
+<meta name=generator content="Hugo 0.93.0">
 <meta name=robots content="noindex, nofollow">
 <link rel=stylesheet href=/ananke/css/main.min.css>
 <link href=/index.xml rel=alternate type=application/rss+xml title="OPI Project Website">
@@ -18,8 +17,7 @@
 <meta itemprop=description content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="OPI Project Website">
 <meta name=twitter:description content>
-</head>
-<body class="ma0 avenir bg-near-white">
+</head><body class="ma0 avenir bg-near-white">
 <header>
 <div class="pb3-m pb6-l bg-black">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
@@ -29,25 +27,15 @@ OPI Project Website
 </a>
 <div class="flex-l items-center">
 <div class=ananke-socials>
-</div>
-</div>
-</div>
-</nav>
-<div class="tc-l pv3 ph3 ph4-ns">
+</div></div></div></nav><div class="tc-l pv3 ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
 OPI Project Website
-</h1>
-</div>
-</div>
-</header>
-<main class=pb7 role=main>
+</h1></div></div></header><main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-</article>
-<div class="pa3 pa4-ns w-100 w-70-ns center">
+</article><div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
 Recent Posts
-</h1>
-<section class="w-100 mw8">
+</h1><section class="w-100 mw8">
 <div class="relative w-100 mb4">
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
@@ -57,28 +45,15 @@ Recent Posts
 <a href=/posts/2022-02-22-opi-event/ class="color-inherit dim link">
 Open Programmable Infrastructure Project Event
 </a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches. The event schedule and speaker list is provided below. Links to attend this event will be shared by March 14th.
-</div>
-<a href=/posts/2022-02-22-opi-event/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
-</section>
-</div>
-</main>
-<footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
+</h1><div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches. The event schedule and speaker list is provided below.
+OPI Event - Day 1 Time: Mar 15, 2022 08:00 AM Pacific Time Meeting Link OPI Event - Day 2 Time: Mar 16, 2022 08:00 AM Pacific Time Meeting Link
+</div><a href=/posts/2022-02-22-opi-event/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div></div></div></article></div></section></div></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://Diamond-Bluff.github.io/>
 &copy; OPI Project Website 2022
 </a>
 <div>
 <div class=ananke-socials>
-</div></div>
-</div>
-</footer>
-</body>
-</html>
+</div></div></div></footer></body></html>
