deploy: dd7b19e4cdb82271d91f4badd483570a23cada32

--- a/about/index.html
+++ b/about/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content>
+<title>About | OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
+<meta name=description content="Open Programmable Infrastructure">
 <meta name=generator content="Hugo 0.93.0">
 <meta name=robots content="noindex, nofollow">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/tags/index.xml rel=alternate type=application/rss+xml title="OPI Project Website">
-<link href=/tags/index.xml rel=feed type=application/rss+xml title="OPI Project Website">
-<meta property="og:title" content="Tags">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://Diamond-Bluff.github.io/tags/">
-<meta itemprop=name content="Tags">
-<meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Tags">
-<meta name=twitter:description content>
+<meta property="og:title" content="About">
+<meta property="og:description" content="Open Programmable Infrastructure">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://Diamond-Bluff.github.io/about/"><meta property="article:section" content>
+<meta itemprop=name content="About">
+<meta itemprop=description content="Open Programmable Infrastructure">
+<meta itemprop=wordCount content="25">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="About">
+<meta name=twitter:description content="Open Programmable Infrastructure">
 </head><body class="ma0 avenir bg-near-white">
 <header class="cover bg-top" style=background-image:url(https://Diamond-Bluff.github.io/diamond-bluff-wi.jpg)>
 <div class=bg-black-60>
@@ -42,15 +42,20 @@ About
 </span>
 <span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
 </span></a>
-</div></div></div></nav><div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Tags
-</h1></div></div></header><main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links mid-gray">
-</div></article><div class="mw8 center">
-<section class=ph4>
-</section></div></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
+</div></div></div></nav><div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">About</h1><h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
+Open Programmable Infrastructure
+</h2></div></div></header><main class=pb7 role=main>
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p><h1 class=f1>
+About
+</h1></header><div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+<p>The objective of the Diamond Bluff initiative is to foster a community-driven
+standards-based open ecosystem for next generation architectures and frameworks
+based on DPU/IPU-like technologies.</p></div></article></div></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://Diamond-Bluff.github.io/>
 &copy; OPI Project Website 2022
