--- a/index.html
+++ b/index.html
@@ -2,37 +2,54 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content>
+<title>Open Programmable Infrastructure | OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
+<meta name=description content="Unlocking your programmable future.">
 <meta name=generator content="Hugo 0.93.0">
 <meta name=robots content="noindex, nofollow">
 <link rel=stylesheet href=/ananke/css/main.min.css>
 <link href=/index.xml rel=alternate type=application/rss+xml title="OPI Project Website">
 <link href=/index.xml rel=feed type=application/rss+xml title="OPI Project Website">
-<meta property="og:title" content="OPI Project Website">
-<meta property="og:description" content>
+<meta property="og:title" content="Open Programmable Infrastructure">
+<meta property="og:description" content="Unlocking your programmable future.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://Diamond-Bluff.github.io/">
-<meta itemprop=name content="OPI Project Website">
-<meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="OPI Project Website">
-<meta name=twitter:description content>
+<meta itemprop=name content="Open Programmable Infrastructure">
+<meta itemprop=description content="Unlocking your programmable future."><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Open Programmable Infrastructure">
+<meta name=twitter:description content="Unlocking your programmable future.">
 </head><body class="ma0 avenir bg-near-white">
-<header>
-<div class="pb3-m pb6-l bg-black">
+<header class="cover bg-top" style=background-image:url(https://Diamond-Bluff.github.io/diamond-bluff-wi.jpg)>
+<div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
 OPI Project Website
 </a>
 <div class="flex-l items-center">
-<div class=ananke-socials>
-</div></div></div></nav><div class="tc-l pv3 ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 light-silver mb0 lh-title">
-OPI Project Website
-</h1></div></div></header><main class=pb7 role=main>
+<ul class="pl0 mr3">
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/about/ title="About page">
+About
+</a>
+</li></ul><div class=ananke-socials>
+<a href=https://github.com/Diamond-Bluff target=_blank class="github ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="GitHub link" rel=noopener aria-label="follow on GitHub——Opens in a new window">
+<span class=icon><svg style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span></a>
+<a href=https://join.slack.com/t/opi-project/signup target=_blank class="slack ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window">
+<span class=icon><svg style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span></a>
+</div></div></div></nav><div class="tc-l pv4 pv6-l ph3 ph4-ns">
+<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
+Open Programmable Infrastructure
+</h1><h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+Unlocking your programmable future.
+</h2></div></div></header><main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-</article><div class="pa3 pa4-ns w-100 w-70-ns center">
+<p>The objective of the Diamond Bluff initiative is to foster a community-driven standards-based open ecosystem for next generation architectures and frameworks based on DPU/IPU-like technologies.</p></article><div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
 Recent Posts
 </h1><section class="w-100 mw8">
@@ -40,7 +57,11 @@ Recent Posts
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
+<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+<a href=/posts/2022-02-22-opi-event/ class="db grow">
+<img src=https://Diamond-Bluff.github.io/diamond-bluff-wi.jpg class=img alt="image from Open Programmable Infrastructure Project Event">
+</a>
+</div><div class="blah w-100 w-60-ns pl3-ns">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=/posts/2022-02-22-opi-event/ class="color-inherit dim link">
 Open Programmable Infrastructure Project Event
@@ -56,4 +77,14 @@ OPI Event - Day 1 Time: Mar 15, 2022 08:00 AM Pacific Time Meeting Link OPI Even
 </a>
 <div>
 <div class=ananke-socials>
+<a href=https://github.com/Diamond-Bluff target=_blank class="github ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="GitHub link" rel=noopener aria-label="follow on GitHub——Opens in a new window">
+<span class=icon><svg style="enable-background:new 0 0 512 512" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M256 32C132.3 32 32 134.8 32 261.7c0 101.5 64.2 187.5 153.2 217.9 11.2 2.1 15.3-5 15.3-11.1.0-5.5-.2-19.9-.3-39.1-62.3 13.9-75.5-30.8-75.5-30.8-10.2-26.5-24.9-33.6-24.9-33.6-20.3-14.3 1.5-14 1.5-14 22.5 1.6 34.3 23.7 34.3 23.7 20 35.1 52.4 25 65.2 19.1 2-14.8 7.8-25 14.2-30.7-49.7-5.8-102-25.5-102-113.5.0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8.0.0 18.8-6.2 61.6 23.5 17.9-5.1 37-7.6 56.1-7.7 19 .1 38.2 2.6 56.1 7.7 42.8-29.7 61.5-23.5 61.5-23.5 12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6.0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5.0 30.7-.3 55.5-.3 63 0 6.1 4 13.3 15.4 11C415.9 449.1 480 363.1 480 261.7 480 134.8 379.7 32 256 32z"/></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span></a>
+<a href=https://join.slack.com/t/opi-project/signup target=_blank class="slack ananke-social-link link-transition stackoverflow link dib z-999 pt3 pt0-l mr1" title="Slack link" rel=noopener aria-label="follow on Slack——Opens in a new window">
+<span class=icon><svg style="enable-background:new 65 65 150 135" viewBox="65 65 150 135" xmlns="http://www.w3.org/2000/svg"><style>.st0{fill:#bababa}</style><g><g><path class="st0" d="M99.4 151.2c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9 5.8-12.9 12.9-12.9h12.9v12.9z"/><path class="st0" d="M105.9 151.2c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V151.2z"/></g><g><path class="st0" d="M118.8 99.4c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9 12.9 5.8 12.9 12.9v12.9H118.8z"/><path class="st0" d="M118.8 105.9c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H86.5c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3z"/></g><g><path class="st0" d="M170.6 118.8c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9-5.8 12.9-12.9 12.9h-12.9V118.8z"/><path class="st0" d="M164.1 118.8c0 7.1-5.8 12.9-12.9 12.9s-12.9-5.8-12.9-12.9V86.5c0-7.1 5.8-12.9 12.9-12.9s12.9 5.8 12.9 12.9v32.3z"/></g><g><path class="st0" d="M151.2 170.6c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9-12.9-5.8-12.9-12.9v-12.9h12.9z"/><path class="st0" d="M151.2 164.1c-7.1.0-12.9-5.8-12.9-12.9s5.8-12.9 12.9-12.9h32.3c7.1.0 12.9 5.8 12.9 12.9s-5.8 12.9-12.9 12.9H151.2z"/></g></g></svg>
+</span>
+<span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
+</span></a>
 </div></div></div></footer></body></html>
