--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@ Recent Posts
 Open Programmable Infrastructure Project Event
 </a>
 </h1><div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches. The event schedule and speaker list is provided below.
-OPI Event - Day 1 Time: Mar 15, 2022 08:00 AM Pacific Time Meeting Link OPI Event - Day 2 Time: Mar 16, 2022 08:00 AM Pacific Time Meeting Link
+We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches.
+You can add the events to your calendar here.
+The event schedule and speaker list is provided below.
 </div><a href=/posts/2022-02-22-opi-event/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div></div></div></article></div></section></div></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
