deploy: 1ca4852daf754e25a074e505280b7d6f0f37bed2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Recent Posts
 Open Programmable Infrastructure Project Event
 </a>
 </h1><div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm PST. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches.
+We are pleased to announce the Alpha edition of the Open Programmable Infrastructure (OPI) event that will be held virtually on March 15th and March 16th, 2022 from 8am-1:30pm Pacific Time. This is an exciting opportunity to share in the various community efforts underway to make infrastructure fully programmable across software and hardware devices such as IPUs, DPUs, or switches.
 You can add the events to your calendar here.
 The event schedule and speaker list is provided below.
 </div><a href=/posts/2022-02-22-opi-event/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
