--- a/join/index.html
+++ b/join/index.html
@@ -2,22 +2,24 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content>
+<title>Connect | OPI Project Website</title><meta name=viewport content="width=device-width,minimum-scale=1">
+<meta name=description content="Join the Open Programmable Infrastructure Project">
 <meta name=generator content="Hugo 0.93.1">
 <meta name=robots content="noindex, nofollow">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<meta property="og:title" content="404 Page not found">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://Diamond-Bluff.github.io/404.html">
-<meta itemprop=name content="404 Page not found">
-<meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="404 Page not found">
-<meta name=twitter:description content>
+<meta property="og:title" content="Connect">
+<meta property="og:description" content="Join the Open Programmable Infrastructure Project">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://Diamond-Bluff.github.io/join/"><meta property="article:section" content>
+<meta itemprop=name content="Connect">
+<meta itemprop=description content="Join the Open Programmable Infrastructure Project">
+<meta itemprop=wordCount content="384">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Connect">
+<meta name=twitter:description content="Join the Open Programmable Infrastructure Project">
 </head><body class="ma0 avenir bg-near-white">
-<header>
-<div class=bg-black>
+<header class="cover bg-top" style=background-image:url(https://Diamond-Bluff.github.io/diamond-bluff-wi.jpg)>
+<div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -44,11 +46,34 @@ Connect
 </span>
 <span class=new-window><svg height="8" style="enable-background:new 0 0 1000 1000" viewBox="0 0 1e3 1e3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M598 128h298v298h-86V274L392 692l-60-60 418-418H598v-86zM810 810V512h86v298c0 46-40 86-86 86H214c-48 0-86-40-86-86V214c0-46 38-86 86-86h298v86H214v596h596z" style="fill-rule:evenodd;clip-rule:evenodd"/></svg>
 </span></a>
-</div></div></div></nav></div></header><main class=pb7 role=main>
-<article class="center cf pv5 measure-wide-l">
-<h1>
-This is not the page you were looking for
-</h1></article></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
+</div></div></div></nav><div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Connect</h1><h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
+Join the Open Programmable Infrastructure Project
+</h2></div></div></header><main class=pb7 role=main>
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p><h1 class=f1>
+Connect
+</h1></header><div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
+<p>The Open Programmable Infrastructure Project is in the early stages of forming.
+The Information below is how you can participate.</p><h2 id=overview-slides>Overview Slides</h2><script type=text/javascript src=/js/pdf-js/build/pdf.js></script>
+<style>#the-canvas{border:1px solid #000;direction:ltr;width:100%;height:auto;display:none}#paginator{display:none;text-align:center;margin-bottom:10px}#loadingWrapper{display:none;justify-content:center;align-items:center;width:100%;height:350px}#loading{display:inline-block;width:50px;height:50px;border:3px solid #d2d0d0;border-radius:50%;border-top-color:#383838;animation:spin 1s ease-in-out infinite;-webkit-animation:spin 1s ease-in-out infinite}@keyframes spin{to{-webkit-transform:rotate(360deg)}}@-webkit-keyframes spin{to{-webkit-transform:rotate(360deg)}}</style><div id=paginator>
+<button id=prev>Previous</button>
+<button id=next>Next</button>
+&nbsp; &nbsp;
+<span>Page: <span id=page_num></span> / <span id=page_count></span></span>
+</div><div id=embed-pdf-container>
+<div id=loadingWrapper>
+<div id=loading></div></div><canvas id=the-canvas></canvas>
+</div><script type=text/javascript>window.onload=function(){l="https://Diamond-Bluff.github.io//opi-slides.pdf",b=""==="true",f=""==="true",m=parseInt("")||1,r=window["pdfjs-dist/build/pdf"],r.GlobalWorkerOptions.workerSrc="/js/pdf-js/build/pdf.worker.js";var l,b,f,m,r,s=null,e=m,o=!1,n=null,d=3,t=document.getElementById("the-canvas"),u=t.getContext("2d"),h=document.getElementById("paginator"),a=document.getElementById("loadingWrapper");v(),g();function i(e){o=!0,s.getPage(e).then(function(s){var e=s.getViewport({scale:d}),a,r;t.height=e.height,t.width=e.width,a={canvasContext:u,viewport:e},r=s.render(a),r.promise.then(function(){o=!1,p(),n!==null&&(i(n),n=null)})}),document.getElementById("page_num").textContent=e}function p(){a.style.display="none",t.style.display="block"}function g(){if(f)return;a.style.display="flex",t.style.display="none"}function v(){if(b)return;h.style.display="block"}function c(e){o?n=e:i(e)}function j(){if(e<=1)return;e--,c(e)}document.getElementById("prev").addEventListener("click",j);function y(){if(e>=s.numPages)return;e++,c(e)}document.getElementById("next").addEventListener("click",y),r.getDocument(l).promise.then(function(n){s=n;var t=s.numPages;document.getElementById("page_count").textContent=t,e>t&&(e=t),i(e)})}</script>
+<h2 id=interest-form>Interest Form</h2><p>Please fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSdYilTsg74EZCh2_5G6dPtNd0z3EQv4Pc63brUUpM1XMQkzMg/viewform?usp=sf_link">this form</a>
+if you are interested in joining the Open Programmable Infrastructure Project.
+Once you have filled out the participation form you will be added to the
+contact sheet and have access to edit it. You can then join any desired
+subgroup by adding an x to the appropriate box. Also, it will help to email
+the group leader to make sure you are included in invites.</p></div></article></div></main><footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
 <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href=https://Diamond-Bluff.github.io/>
 &copy; OPI Project Website 2022
